--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			autoplay
 			controls
 			style="width: 100%; height: 100%"
-			src="http://radio.zewaka.webcam"
+			src="http://daddyp.duckdns.org:8000/stream.mp3"
 			>
 		</audio>
 	</div>
